fixing the leaflet placeholder plot The sole purpose of this plot is to be a dummy and to provide the width of the box it is plotted in to adjust the width of the legend of the leaflet color scale in a latter point. A height of `0` was not possible anymore. It has been set to `1px` and, instead, the CSS option `visibility: hidden` has been added.

--- a/res/shiny-server/assets/climex.css
+++ b/res/shiny-server/assets/climex.css
@@ -341,6 +341,11 @@ table.table-bordered.dataTable {
   position: relative !important;
   left: 25% !important;
 }
+#leaflet-placeholder {
+  /* The exclusive purpose of this object is to access the width of
+     the current box. */
+  visibility: hidden !important;
+}
 
 /* display the MathJax text in the same font as everything else */
 #math-text {
